releaseb releasef realasing meta